--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -36,43 +36,38 @@
         </div>
       </div>
 
-      <!--<div class="form-group row">
+      <div class="form-group row">
         <label for="identificationType" class="text-dark col-form-label col-sm-2">Tipo Documento</label>
         <div class="col-sm-6">
-          <select class="custom-select form-control" id="identificationType" required [(ngModel)]="cliente.identificationType" #identificationType="ngModel">
-            <option selected disabled value="">Escoja una opción</option>
-            <option value="CC">Cédula</option>
-            <option value="TI">Tarjeta de Identidad</option>
-            <option value="PAS">Pasaporte</option>
-            <option value="CE">Cédula de Extranjería</option>
+          <select name="identificationType" class="custom-select form-control" id="identificationType"  [(ngModel)]="cliente.identificationType" #identificationType="ngModel">
+            <option *ngFor="let option of options" [value]="option" >{{option}}</option>
           </select>
         </div>
-      </div>-->
+      </div>
 
       <div class="form-group row">
         <label for="document" class="text-dark col-form-label col-sm-2">Documento</label>
         <div class="col-sm-6">
-          <input disabled type="text" class="form-control" [(ngModel)]="cliente.document" name="document" #document="ngModel">
+          <input [disabled]="isEdit"  type="text" class="form-control" [(ngModel)]="cliente.document" name="document" #document="ngModel">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="birthDate" class="text-dark col-form-label col-sm-2">Fecha de nacimiento</label>
         <div class="col-sm-6">
-          <input type="date" class="form-control" [(ngModel)]="cliente.birthDate" name="birthDate" #birthDate="ngModel">
+          <input type="date"  date="dd/MM/yyyy" class="form-control" [(ngModel)]="cliente.birthDate" name="birthDate" #birthDate="ngModel">
         </div>
       </div>
 
-      <!--<div class="form-group row">
+      <div class="form-group row">
         <label for="gender" class="text-dark col-form-label col-sm-2">Género</label>
         <div class="col-sm-6">
-          <select id="gender" class="custom-select form-control" required [(ngModel)]="cliente.gender" #gender="ngModel">
-            <option selected disabled value="">Escoja una opción</option>
+          <select id="gender" name="gender" class="custom-select form-control" required [(ngModel)]="cliente.gender" #gender="ngModel">
             <option value="M">Masculino</option>
             <option value="F">Femenino</option>
           </select>
         </div>
-      </div>-->
+      </div>
 
       <div class="form-group row">
         <label for="email" class="text-dark col-form-label col-sm-2">Email</label>
@@ -122,7 +117,8 @@
 
       <div class="form-group row">
         <div class="col-sm-8">
-	<button class="btn btn-primary" role="button" (click)='create()' *ngIf="!cliente.id else elseBlock" [disabled]="!clienteForm.form.valid">Crear</button>
+
+          <button class="float-right btn btn-primary" role="button" (click)='create()' *ngIf="!cliente.id else elseBlock" [disabled]="!clienteForm.form.valid">Crear</button>
 
           <ng-template #elseBlock>
             <button class="float-right btn btn-primary" role="button" (click)='update()' [disabled]="!clienteForm.form.valid">Editar</button>
