--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container py-2">
     <p class="text-white my-2">
       &copy;
-      <a ng-src="http://danielfuenteslopez.com.co/" target="_blank">
+      <a href="http://danielfuenteslopez.com.co/" target="_blank">
       	{{ autor.name + ' ' + autor.lastName}}
       </a>
     </p>
