--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,22 +9,25 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/clientes">Clientes</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/director">Directores</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/producer">Productores</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/hero">Protagonistas</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Opciones para listar
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li class="dropdown-item" >
+            <a class="nav-link text-dark" routerLink="/clientes">Clientes</a>
+          </li>
+          <li class="dropdown-item" >
+            <a class="nav-link text-dark" routerLink="/producer">Productores</a>
+          </li>
+          <li class="dropdown-item" >
+            <a class="nav-link text-dark" routerLink="/director">Directores</a>
+          </li>
+          <li class="dropdown-item" >
+            <a class="nav-link text-dark" routerLink="/hero">Protagonistas</a>
+          </li>
+        </div>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-    </form>
   </div>
 </nav>
