Adding visual enhancements in all views

--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -5,7 +5,7 @@
 </ul>
 <div class="card text-white">
   <div class="card-header text-dark">{{ titulo }}</div>
-  <div class="card-body">
+  <div class="card-body mb-3">
 
     <form #clienteForm="ngForm">
       <div class="form-group row">
