--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,21 +1,19 @@
 <div class="card border-primary mb-5" *ngIf="mostrar else elseBlock">
   <div class="card-header">Protagonistas</div>
   <div class="card-body text-primary">
-    <h5 class="card-title my-2 ">Listado de protagonistas</h5>
+    <h5 class="card-title my-2 text-dark">Listado de protagonistas</h5>
 
-    <table class="table table-bordered table-striped">
-      <thead>
+    <table class="table table-bordered table-striped text-dark">
+      <thead class="text-uppercase">
         <tr>
           <th>Código</th>
           <th>Nombre</th>
-          <th>Descripción</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let hero of heroes">
           <td>{{ hero.code }}</td>
           <td>{{ hero.name }}</td>
-          <td>{{ hero.description }}</td>
         </tr>
       </tbody>
     </table>
