--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,7 +1,7 @@
 <div class="card border-primary mb-3" *ngIf="mostrar else elseBlock">
   <div class="card-header">Clientes</div>
   <div class="card-body text-primary">
-    <h5 class="card-title">Listado de clientes</h5>
+    <h5 class="card-title text-dark">Listado de clientes</h5>
     <div class="my-2 text-left">
       <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']">
         Crear Cliente
@@ -10,14 +10,14 @@
     <div *ngIf="clientes?.length == 0" class="alert alert-info">
       No hay registros en la base de datos!
     </div>
-    <table class="table table-bordered table-striped" *ngIf="clientes?.length>0">
-      <thead>
+    <table style="margin-bottom: 70px;" class="table table-bordered table-striped text-dark" *ngIf="clientes?.length>0">
+      <thead class="text-uppercase">
         <tr>
           <th>Código</th>
           <th>Nombre</th>
           <th>Apellido</th>
           <th>Email</th>
-          <th>Fecha</th>
+          <th>Fecha de Creación</th>
           <th>
             Editar
           </th>
@@ -30,7 +30,7 @@
           <td>{{ cliente.name }}</td>
           <td>{{ cliente.lastName }}</td>
           <td>{{ cliente.email }}</td>
-          <td>{{ cliente.birthDate }}</td>
+          <td>{{ cliente.createAt }}</td>
           <td>
             <button type="button" name="editar" [routerLink]="['/clientes/form', cliente.id]" class="btn btn-primary btn-sm">Editar</button>
           </td>
