--- a/src/app/director/director.component.html
+++ b/src/app/director/director.component.html
@@ -1,10 +1,10 @@
 <div class="card border-primary mb-3" *ngIf="mostrar else elseBlock">
   <div class="card-header">Directores</div>
   <div class="card-body text-primary">
-    <h5 class="card-title my-2 ">Listado de directores</h5>
+    <h5 class="card-title my-2 text-dark">Listado de directores</h5>
 
-    <table class="table table-bordered table-striped">
-      <thead>
+    <table class="table table-bordered table-striped text-dark">
+      <thead class="text-uppercase">
         <tr>
           <th>Código</th>
           <th>Nombre</th>
